--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html>
 <head>
   <meta charset='utf-8' />
-  <title>M’n Allereerste Website!</title>
+  <title><b>Michelangelo Buonarroti, <i>'Il Divino'</i></b></title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/fira-sans" type="text/css"/>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>M’n Allereerste Website!</h1>
+  <h1><b>Michelangelo Buonarroti, <i>'Il Divino'</i></b></h1>
   <p>
-    Tijdens de collegereeks <a href="https://osiris.uu.nl/osiris_student_uuprd/OnderwijsCatalogusSelect.do?selectie=cursus&collegejaar=2018&taal=nl&cursus=GKRMV17021">Cultural transfer I:
-    Premodern Sources in Modern Contexts</a>, gegeven door Arthur Weststeijn,
-    leren we hoe we zelf een simpele website kunnen maken en publiceren om ons
-    onderzoek te presenteren.
+    <b>Michelangelo Buonarroti</b> (March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, "exerting an unparalleled influence on the development of Western art".
+Already the Italian Renaissance Michelangelo Buonarroti was seen as the protagonist of his time, enjoying a celebrity status.
+His artwork was referenced countless times, to the extent that in the present day and age most people are familiar with his oeuvre, sometimes without even knowing the artist's actual name.
+  </p>
+  <p>
+    So Michelangelo's artwork has become part of our Western <i>'icons'</i>, our <i>'cultural subconscience'</i>, but who was the man behind it? 
+    And did this <i>'divine'</i> Michelangelo like his own art as much as we do?
+  </p>
+  <p>
+Have a look at the rest of this website to find out!
   </p>
   <p>
     Veel mensen gebruiken een <em>content management system</em> (CMS) zoals bijvoorbeeld
