--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8' />
   <title><b>Michelangelo Buonarroti, <i>'Il Divino'</i></b></title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/fira-sans" type="text/css"/>
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/cmu-serif" type="text/css"/>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
