--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8' />
-  <title><b>Michelangelo Buonarroti, <i>'Il Divino'</i></b></title>
+  <title>Michelangelo Buonarroti, <i>'Il Divino'</i></title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/cmu-serif" type="text/css"/>
   <link rel="stylesheet" href="style.css">
