--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head> 
+          <img src="https://raw.githubusercontent.com/annehaak/annehaak.github.io/master/%22Oh%20wonder%20of%20nature%2C%20Angel%20elect%20%5B...%5D%20you%20are%20perfect%20in%20both%20wisdom%20and%20goodness.%22.png" />
+          </head>
   <meta charset='utf-8' />
   <title>Michelangelo Buonarroti, <i>'Il Divino'</i></title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
