--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Michelangelo Buonarroti, <i>'Il Divino'</i></title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/gfs-didot" type="text/css"/>
-  <link rel="stylesheet" href="st>yle.css"
+  <link rel="stylesheet" href="style.css"
         </head>
 <body>
   <h1><b>Michelangelo Buonarroti, <i>'Il Divino'</i></b></h1>
