--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset='utf-8' />
+  <title>The Mind of Michelangelo</title>
+  <link rel="shortcut icon" type="image/png" href="files/Image/Favicon.png">
+  <link rel="shortcut icon" sizes="192x192" href="files/Image/Favicon.png">
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/montserrat" type="text/css"/>
+  <link rel="stylesheet" href="style.css">
+   <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="Podcast.html">Podcast</a>
+  <a href="video.html">Video</a>
+  <a href="civilization.html">Over Civilization</a>
+  <a href="Informatie.html"   >Meer weten</a>
+</div> 
+</head>
+<body>
+<html>
 <head> 
           <img src="https://raw.githubusercontent.com/annehaak/annehaak.github.io/master/%22Oh%20wonder%20of%20nature%2C%20Angel%20elect%20%5B...%5D%20you%20are%20perfect%20in%20both%20wisdom%20and%20goodness.%22.png" />
           </head>
