--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Already the Italian Renaissance Michelangelo Buonarroti was seen as the protagon
 His artwork was referenced countless times, to the extent that in the present day and age most people are familiar with his oeuvre, sometimes without even knowing the artist’s actual name.</p>
 
 <p>So Michelangelo’s artwork has become part of our Western <em>‘icons’</em>, our <em>‘cultural subconscience’</em>, but who was the man behind it? 
-And did this <em>‘divine’</em> Michelangelo like his own art as much as we do?</p>
+And did the <em>‘divine’</em> Michelangelo like his own art as much as we do?</p>
 
 <p>Have a look at the rest of this website to find out!</p>
          
