--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="style.css">
    <div class="topnav">
   <a class="active" href="index.html">Home</a>
-  <a href="Podcast.html">Podcast</a>
-  <a href="video.html">Video</a>
-  <a href="civilization.html">Over Civilization</a>
-  <a href="Informatie.html"   >Meer weten</a>
+  <a href="about.html">About Michelangelo</a>
+  <a href="cappellasistina.html">The Sistine Chapel</a>
+  <a href="prigioni.html">The Slaves</a>
+  <a href="more.html">Hungry for more?</a>
 </div> 
 </head>
 <body>
