--- a/more.html
+++ b/more.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset='utf-8' />
+  <title>The Mind of Michelangelo</title>
+  <link rel="shortcut icon" type="image/png" href="files/Image/Favicon.png">
+  <link rel="shortcut icon" sizes="192x192" href="files/Image/Favicon.png">
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/montserrat" type="text/css"/>
+  <link rel="stylesheet" href="style.css">
+   <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about.html">About Michelangelo</a>
+  <a href="cappellasistina.html">The Sistine Chapel</a>
+  <a href="prigioni.html">The Slaves</a>
+  <a href="more.html">Hungry for more?</a>
+</div> 
+</head>
+<body>
+<html>
+  <h1> Hungry for more?</h1>
+  <h3> If you can't get enough of Michelangelo, don't forget have a look at this bibliography! 
+    
+    <p>The selection ranges from light to more specialist literature.</p> 
+  
+    <p>Missing something? <p><a href="anne.haak@hotmail.com">Let me know!</a></h3></p>
 
+<body>
+          <p> Bibliography </p>
