--- a/more.html
+++ b/more.html
@@ -19,11 +19,10 @@
 <body>
 <html>
   <h1> Hungry for more?</h1>
-  <h3> If you can't get enough of Michelangelo, don't forget have a look at this bibliography! 
+  <p> If you can't get enough of Michelangelo, don't forget have a look at this bibliography! 
     
     <p>The selection ranges from light to more specialist literature.</p> 
-  
-    <p>Missing something? <p><a href="anne.haak@hotmail.com">Let me know!</a></h3></p>
+  <p>Missing something? <p><a href="anne.haak@hotmail.com">Let me know!</a></p>
 
 <body>
-          <p> Bibliography </p>
+  <p><h2>Bibliography</h2></p>
