--- a/more.html
+++ b/more.html
@@ -19,7 +19,7 @@
 <body>
 <html>
   <h1> Hungry for more?</h1>
-  <p> If you can't get enough of Michelangelo, don't forget have a look at this bibliography! 
+  <p> If you can't get enough of Michelangelo, don't forget to have a look at this bibliography! 
     
     <p>The selection ranges from light to more specialist literature.</p> 
   <p>Missing something? <p><a href="anne.haak@hotmail.com">Let me know!</a></p>
