--- a/more.html
+++ b/more.html
@@ -21,7 +21,7 @@
   <h1>Hungry for more?</h1>
   <p>If you can't get enough of Michelangelo, don't forget to have a look at this bibliography!</p>
     <p>The selection ranges from easy to use websites to more specialist literature.</p> 
-  <p>Missing something? <p><a href="anne.haak@hotmail.com">Let me know!</a></p>
+  <p>Missing something? <a href="anne.haak@hotmail.com">Let me know!</a></p>
 
 <body>
   <p><h2>Bibliography</h2></p>
