--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <html>
 <head> 
-          <img src="https://raw.githubusercontent.com/annehaak/annehaak.github.io/master/%22Oh%20wonder%20of%20nature%2C%20Angel%20elect%20%5B...%5D%20you%20are%20perfect%20in%20both%20wisdom%20and%20goodness.%22.png" />
+          <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/“It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.”.png"/>
           </head>
 
 <h1 id="michelangelo-buonarroti-il-divino"><strong>Michelangelo Buonarroti, <em>‘Il Divino’</em></strong></h1>
