--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <body>
 <html>
 <head> 
-          <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/“It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.”.png"/>
-          </head>
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/“It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.”.png"/></head>
 
 <h1 id="michelangelo-buonarroti-il-divino"><strong>Michelangelo Buonarroti, <em>‘Il Divino’</em></strong></h1>
   <h2> Inside the Master's Mind </h2>
