--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="files/Image/Favicon.png">
   <link rel="shortcut icon" sizes="192x192" href="files/Image/Favicon.png">
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/montserrat" type="text/css"/>
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
   <link rel="stylesheet" href="style.css">
    <div class="topnav">
   <a class="active" href="index.html">Home</a>
