--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<h1 id="michelangelo-buonarroti-il-divino"><strong>Michelangelo Buonarroti, <em>‘Il Divino’</em></strong></h1>
+<h1 id="michelangelo-buonarroti-il-divino"><b>Michelangelo Buonarroti, <em>‘Il Divino’</em></b></h1>
   <h2> Inside the Master's Mind </h2>
 
 <body>
