--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html>
+  <head> 
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22If%20people%20knew%20how%20hard%20I%20worked%20to%20get%20my%20mastery%2C%20it%20wouldn't%20seem%20so%20wonderful%20at%20all.”.png"/></head>
+<head>
+  <meta charset='utf-8' />
+  <title>The Mind of Michelangelo</title>
+  <link rel="shortcut icon" type="image/png" href="files/Image/Favicon.png">
+  <link rel="shortcut icon" sizes="192x192" href="files/Image/Favicon.png">
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
+  <link rel="stylesheet" href="style.css">
+   <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about.html">About Michelangelo</a>
+  <a href="cappellasistina.html">The Sistine Chapel</a>
+  <a href="prigioni.html">The Slaves</a>
+  <a href="more.html">Hungry for more?</a>
+</div> 
+</head>
+<body>
+
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg"/>
 
 
