--- a/about.html
+++ b/about.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+  <head> 
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22Oh%20wonder%20of%20nature%2C%20Angel%20elect%20%5B...%5D%20you%20are%20perfect%20in%20both%20wisdom%20and%20goodness.%22.png"/></head>
+<head>
+  <meta charset='utf-8' />
+  <title>The Mind of Michelangelo</title>
+  <link rel="shortcut icon" type="image/png" href="files/Image/Favicon.png">
+  <link rel="shortcut icon" sizes="192x192" href="files/Image/Favicon.png">
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
+  <link rel="stylesheet" href="style.css">
+   <div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about.html">About Michelangelo</a>
+  <a href="cappellasistina.html">The Sistine Chapel</a>
+  <a href="prigioni.html">The Slaves</a>
+  <a href="more.html">Hungry for more?</a>
+</div> 
+</head>
+<body>
