--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 The frescoes as well as the many sculptures he made have been referenced countless times, to the extent that in the present day and age almost everyone is familiar with his oeuvre, sometimes without even knowing the artist’s actual name.</p>
 
 <p>So Michelangelo’s artwork has become part of our Western <em>‘icons’</em>, our <em>‘cultural subconscience’</em>, but who was the man behind it? 
-And did the <em>‘divine’</em> Michelangelo like his own art as much as we do?</p>
+And did the <em>‘divine’</em> Michelangelo back then like his own art as much as we do now?</p>
 
 <p>Have a look at the rest of this website to find out!</p>
          
