--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
 </head>
 <body>
 
+  
+  <div class="jumbotron">
+  <h1 class="display-3">Michelangelo Buonarroti, ‘Il Divino’</h1>
+    <h2 class="display-3">Inside the Master's Mind</h2>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
+</div>
+  
 <h1 id="michelangelo-buonarroti-il-divino"><b>Michelangelo Buonarroti, <em>‘Il Divino’</em></b></h1>
   <h2> Inside the Master's Mind </h2>
 
