--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
   
   <div class="jumbotron">
   <h1 class="display-3">Michelangelo Buonarroti, ‘Il Divino’</h1>
-    <h2 class="display-3">Inside the Master's Mind</h2>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">Inside the Master's Mind</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead">
