--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head> 
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/“It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.”.png"/></head>
 <head>
+  
   <meta charset='utf-8' />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width = device-width, initial-scale = 1">
   <title>The Mind of Michelangelo</title>
-  <link rel="shortcut icon" type="image/png" href="files/Image/Favicon.png">
-  <link rel="shortcut icon" sizes="192x192" href="files/Image/Favicon.png">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
   <link rel="stylesheet" href="style.css">
