--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
 
 
 
-    
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
   </body>
 </html>
