--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>The Mind of Michelangelo</title>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
+<meta name="viewport" content="width = device-width, initial-scale = 1">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
   <link rel="stylesheet" href="style.css">
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/“It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.”.png"/>
      
