--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 </head>
 <body>
 
+  <h1>Michelangelo Buonarroti</h1>
   
   <div class="jumbotron">
-  <h1 class="display-3">Michelangelo Buonarroti, ‘Il Divino’</h1>
+  <h1 class="display-3">Michelangelo ‘Il Divino’</h1>
   <p class="lead">Inside the Master's Mind</p>
   <hr class="my-4">
   <p><strong>Michelangelo Buonarroti</strong> (March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, “exerting an unparalleled influence on the development of Western art”.</p>
