--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
 <body>
 
   <h1>Michelangelo Buonarroti</h1>
+  <h2>Inside the Master's Mind</h2>
   
   <div class="jumbotron">
-  <h1 class="display-3">Michelangelo ‘Il Divino’</h1>
-  <p class="lead">Inside the Master's Mind</p>
+  <h1 class="display-3">Hi there!</h1>
+  <p class="lead">#</p>
   <hr class="my-4">
   <p><strong>Michelangelo Buonarroti</strong> (March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, “exerting an unparalleled influence on the development of Western art”.</p>
 <p>Already in the Italian Renaissance Michelangelo Buonarroti was seen as the protagonist of his time. He enjoyed a celebrity status and his work was highly sought after.
