--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 
   <h1>Michelangelo Buonarroti</h1>
-  <h2>Inside the Master's Mind</h2>
+  <p>Inside the Master's Mind</p>
   
   <div class="jumbotron">
   <h1 class="display-3">Hi there!</h1>
