--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>   
-  <meta charset='utf-8' />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
   <title>The Mind of Michelangelo</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<meta name="viewport" content="width = device-width, initial-scale = 1">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
   <link rel="stylesheet" href="style.css">
      
