--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 </head>
 <body>
 
-  <h1>Michelangelo Buonarroti</h1>
+  <div class="jumbotron">
+  <h1 class="display-3">Michelangelo Buonarroti</h1>
   <p class="lead">Inside the Master's Mind</p>
-  
-  <p class="lead"><strong>Michelangelo Buonarroti</strong> (March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, “exerting an unparalleled influence on the development of Western art”.</p>
+  <hr class="my-4">
+  <p><strong>Michelangelo Buonarroti</strong> (March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, “exerting an unparalleled influence on the development of Western art”.</p>
 <p>Already in the Italian Renaissance Michelangelo Buonarroti was seen as the protagonist of his time. He enjoyed a celebrity status and his work was highly sought after.
 The frescoes as well as the many sculptures he made have been referenced countless times, to the extent that in the present day and age almost everyone is familiar with his oeuvre, sometimes without even knowing the artist’s actual name.</p>
 
@@ -58,12 +59,14 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
-
-
-<h2>Suggestions or Contact</h2>
-<p class="lead">Further suggestions for this website? Or a Michelangelo addict who wants to share their passion?</p>
+  
+<div class="jumbotron">
+  <p class="display-3">Suggestions or Contact</p>
+  <hr class="my-4">
+  <p class="lead">Further suggestions for this website? Or a Michelangelo addict who wants to share their passion?</p>
 
 <p class="lead"><a href="anne.haak@hotmail.com">E-mail me</a> and let’s get in touch!</p>
+</div>
 
 
 
