--- a/index.html
+++ b/index.html
@@ -47,16 +47,15 @@
   <h1 class="display-3">Michelangelo Buonarroti</h1>
   <p class="lead">Inside the Master's Mind</p>
   <hr class="my-4">
-  <h3>
-  Michelangelo Buonarroti
-  <small class="text-muted">(March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, “exerting an unparalleled influence on the development of Western art”.</p>
+  <p class="lead">
+  Michelangelo Buonarroti (March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, “exerting an unparalleled influence on the development of Western art”.</p>
 <p>Already in the Italian Renaissance Michelangelo Buonarroti was seen as the protagonist of his time. He enjoyed a celebrity status and his work was highly sought after.
 The frescoes as well as the many sculptures he made have been referenced countless times, to the extent that in the present day and age almost everyone is familiar with his oeuvre, sometimes without even knowing the artist’s actual name.</p>
 
 <p>So Michelangelo’s artwork has become part of our Western <em>‘icons’</em>, our <em>‘cultural subconscience’</em>, but who was the man behind it? 
 And did the <em>‘divine’</em> Michelangelo back then like his own art as much as we do now?</p>
 
-<p>Have a look at the rest of this website to find out!</p></small> 
+<p>Have a look at the rest of this website to find out!</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
