--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
+   
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/“It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.”.png"/>
   
 <div class="jumbotron">
   <h3 class="display-3">Suggestions or Contact</p>
