--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       
 </head>
 
-  <h1>Michelangelo Buonarroti</h1>
+  <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.%22is%20sitting%20on%20the%20other%20side%20of%20fear..png"/>
   
 <body>
 
   <div class="jumbotron">
-  <h1 class="display-3">Inside the Master's Mind</h1>
+  <h1 class="display-3">Michelangelo: Inside the Master's Mind</h1>
   <hr class="my-4">
   <p class="lead">
   Michelangelo Buonarroti (March 6, 1475 - February 18, 1564) is considered the most famous artist of the Italian Renaissance. Some even think it is safe to say that he is the greatest artist to have ever lived, “exerting an unparalleled influence on the development of Western art”.</p>
@@ -62,8 +62,7 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
-   
-<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/“It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.”.png"/>
+  
   
 <div class="jumbotron">
   <h3 class="display-3">Suggestions or Contact</p>
