--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
      
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Inside the Master's Mind</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -58,7 +58,12 @@ The frescoes as well as the many sculptures he made have been referenced countle
 And did the <em>‘divine’</em> Michelangelo back then like his own art as much as we do now?</p>
 
 <p class="lead">Have a look at the rest of this website to find out!</p>
-  <p class="lead">
+  <button type="about.html" class="btn btn-outline-primary">About Michelangelo</button>
+<button type="cappellasistina.html" class="btn btn-outline-secondary">Sistine Chapel</button>
+<button type="prigioni.html" class="btn btn-outline-success">The Slaves</button>
+<button type="more.html" class="btn btn-outline-info">Hungry for more?</button>
+    
+    <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
