--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@ The frescoes as well as the many sculptures he made have been referenced countle
 And did the <em>‘divine’</em> Michelangelo back then like his own art as much as we do now?</p>
 
 <p class="lead">Have a look at the rest of this website to find out!</p>
-  <button type="about.html" class="btn btn-outline-primary">About Michelangelo</button>
+<p class="lead">
+    <button type="about.html" class="btn btn-outline-primary">About Michelangelo</button>
+  <p class="lead">
 <button type="cappellasistina.html" class="btn btn-outline-secondary">Sistine Chapel</button>
+    <p class="lead">
 <button type="prigioni.html" class="btn btn-outline-success">The Slaves</button>
+      <p class="lead">
 <button type="more.html" class="btn btn-outline-info">Hungry for more?</button>
     
     <p class="lead">
