--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
   <div class="collapse navbar-collapse" id="navbarColor03">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+        <p class="lead"><a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about.html">About Michelangelo</a>
+        <p class="lead"><a class="nav-link" href="about.html">About Michelangelo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="cappellasistina.html">The Sistine Chapel</a>
+        <p class="lead"><a class="nav-link" href="cappellasistina.html">The Sistine Chapel</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="prigioni.html">The Slaves</a>
+        <p class="lead"><a class="nav-link" href="prigioni.html">The Slaves</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="more.html">Hungry for more?</a>
+        <p class="lead"><a class="nav-link" href="more.html">Hungry for more?</a>
       </li>
     </ul>
   </div>
