--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
 
 <p class="lead">Have a look at the rest of this website to find out!</p>
 
-    <p class="lead"><button type="about.html" class="btn btn-outline-primary">About Michelangelo</button>
-  <p class="lead"><button type="cappellasistina.html" class="btn btn-outline-secondary">Sistine Chapel</button>
-    <p class="lead"><button type="prigioni.html" class="btn btn-outline-success">The Slaves</button>
-      <p class="lead"><button type="more.html" class="btn btn-outline-info">Hungry for more?</button>
+    <p class="lead"><button type="about.html" href="about.html" class="btn btn-outline-primary">About Michelangelo</button>
+  <p class="lead"><button type="cappellasistina.html" href="cappellasistina.html" class="btn btn-outline-secondary">Sistine Chapel</button>
+    <p class="lead"><button type="prigioni.html" href="prigioni.html" class="btn btn-outline-success">The Slaves</button>
+      <p class="lead"><button type="more.html" href="more.html" class="btn btn-outline-info">Hungry for more?</button>
     
     <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
