--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="style.css">
      
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <p class="lead"><a class="navbar-brand" href="#">Inside the Master's Mind</a>
+      <div class="container">
+  <p class="lead"><a class="navbar-brand">Inside the Master's Mind</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
