--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
   <link rel="stylesheet" href="style.css">
-     
+     <div class="topnav">
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
   <p class="lead"><a class="navbar-brand">Inside the Master's Mind</a>
