--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 </nav>
       
 </head>
-
-  <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22It%20is%20well%20with%20me%20only%20when%20I%20have%20a%20chisel%20in%20my%20hand.%22is%20sitting%20on%20the%20other%20side%20of%20fear..png"/>
+  <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/MICHELANGELO%20BUONARROTI.png"/>
   
 <body>
 
