--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
      <div class="topnav">
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
+         <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/annehaak/allereerste-website/master/insidethe%20master'smind.png">
+<link rel="shortcut icon" sizes="250x250" href="https://raw.githubusercontent.com/annehaak/allereerste-website/master/insidethe%20master'smind.png">
   <p class="lead"><a class="navbar-brand">Inside the Master's Mind</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
