--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -47,8 +47,18 @@
        <body>
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22If%20people%20knew%20how%20hard%20I%20worked%20to%20get%20my%20mastery%2C%20it%20wouldn't%20seem%20so%20wonderful%20at%20all.”.png"/></head>
 
-
+<div class="column">
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg"/>
+       </div>
+       
+       <div class="column">
+<h1>The Sistine Chapel</h1>
+         <p><h3>The sentence “I am no painter” is something one would never expect to hear from an artist like Michelangelo Buonarroti. His frescos in the Sistine Chapel, most famous for The Last Judgment and the Creation of Man have become an icon of western culture and are considered to be Michelangelo’s most famous painted works. However, contrary to popular belief, Michelangelo was not just a visual artist. Not only was he celebrated for his painted and sculpted works; he was an admired architect, and a pretty amazing poet as well.</p></h3>
+<p><h3>Now, you might ask yourself at first: why would an incredibly gifted artist like Michelangelo also feel the need to write poetry? But, looking at it from a different point of view, it might actually make sense. There are a few possible explanations: one of them is the intellectual milieu in which the artist found himself. He might have gone along with the social codes and expectations and profiled himself as a typical, Da Vinci-like ‘Renaissance man’, a homo universalis. Another, more likely explanation is the simple motive of self-expression. Many researchers have noted that Michelangelo projected himself onto anything he created, thus making himself into his own point of reference.  His poetry but also all his other art is filled with little bits and pieces of autobiographical information, and it is up to us to find and interpret them.</p></h3>
+
+<p><h3>On a spring day in 1508, the 10th of May to be precise, 33-year old Michelangelo wrote that he would start working on the vault of Pope Sixtus’ chapel in Rome. Four years later, in October 1512, the work was finished and the Sistine Chapel was re-opened. People were absolutely amazed by the result. You had to be superhuman to create something like this.</p></h3>
+
+<p><h3>You indeed had to be something like a superhuman: imagine spending four years on high scaffolds with only a small, poorly lit and moldy space to work in. It was under these conditions that Michelangelo probably wrote sonnet 5 to his friend Giovanni da Pistoia.</p></h3>
 
 
 <h1 id="sonetto-5-and-the-sistine-chapel"><em>Sonetto 5</em> and the Sistine Chapel</h1>
