--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -59,6 +59,7 @@
 <p><h3>On a spring day in 1508, the 10th of May to be precise, 33-year old Michelangelo wrote that he would start working on the vault of Pope Sixtus’ chapel in Rome. Four years later, in October 1512, the work was finished and the Sistine Chapel was re-opened. People were absolutely amazed by the result. You had to be superhuman to create something like this.</p></h3>
 
 <p><h3>You indeed had to be something like a superhuman: imagine spending four years on high scaffolds with only a small, poorly lit and moldy space to work in. It was under these conditions that Michelangelo probably wrote sonnet 5 to his friend Giovanni da Pistoia.</p></h3>
+  </div>
 
 
 <h1 id="sonetto-5-and-the-sistine-chapel"><em>Sonetto 5</em> and the Sistine Chapel</h1>
