--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -48,8 +48,7 @@
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22If%20people%20knew%20how%20hard%20I%20worked%20to%20get%20my%20mastery%2C%20it%20wouldn't%20seem%20so%20wonderful%20at%20all.”.png"/></head>
 
         <div class="jumbotron">
-<div class="row marketing">
-        <div class="col-lg-6">
+          <div class="row">
        <div class="column">
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg"/>
        </div>
