--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -50,7 +50,7 @@
         <div class="jumbotron">
           <div class="row">
        <div class="column">
-<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg"/>
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" style="width:60%, height:60%>
        </div>
        
           <div class="column">
@@ -63,6 +63,7 @@
 <p>You indeed had to be something like a superhuman: imagine spending four years on high scaffolds with only a small, poorly lit and moldy space to work in. It was under these conditions that Michelangelo probably wrote sonnet 5 to his friend Giovanni da Pistoia.</p></h3>
   </div>
 
+          
 <h4 id="sonetto-5-and-the-sistine-chapel"><em>Sonetto 5</em> and the Sistine Chapel</h4>
 
 <table>
