--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -50,8 +50,17 @@
         <div class="jumbotron">
           <div class="row">
        <div class="column">
-<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" style="width:60%, height:60%>
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" style="width:"329", height:"460">
        </div>
+       <div> 
+       <img class="zoom progressive" alt="Sonnet 5" src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg;fit=inside|320:215" width="480" height="320"  />
+                        </div>
+<div class="product-zoom-button zoom">Click to zoom</div>
+            <div class="product-thumb-slider">
+                        <div class="slide" data-track-label="Sonnet">
+                            <img alt="Sonnet 5" src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg;fit=inside|76:48">
+                        </div>
+                       
        
           <div class="column">
 <h4>The Sistine Chapel</h4>
