--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -45,12 +45,12 @@
   </div>
 </nav>
        <body>
-<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22If%20people%20knew%20how%20hard%20I%20worked%20to%20get%20my%20mastery%2C%20it%20wouldn't%20seem%20so%20wonderful%20at%20all.”.png"/></head>
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22If%20people%20knew%20how%20hard%20I%20worked%20to%20get%20my%20mastery%2C%20it%20wouldn't%20seem%20so%20wonderful%20at%20all.”.png"/ alt="citation"></head>
 
         <div class="jumbotron">
           <div class="row">
        <div class="column">
-<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" style="width:"50" height:"50">
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet 5" style="width:"50" height:"50">
        </div>
                        
        
