--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -50,7 +50,7 @@
         <div class="jumbotron">
           <div class="row">
        <div class="column">
-<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet 5" style="width:"50" height:"50">
+<img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet 5" width:"50" height:"50">
        </div>
                        
        
