--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -44,6 +44,9 @@
     </ul>
   </div>
 </nav>
+       </div>
+    </div> 
+    
        <body>
 <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/%22If%20people%20knew%20how%20hard%20I%20worked%20to%20get%20my%20mastery%2C%20it%20wouldn't%20seem%20so%20wonderful%20at%20all.”.png"/ alt="citation"></head>
 
