--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -66,6 +66,7 @@
 
 <p>You indeed had to be something like a superhuman: imagine spending four years on high scaffolds with only a small, poorly lit and moldy space to work in. It was under these conditions that Michelangelo probably wrote sonnet 5 to his friend Giovanni da Pistoia.</p></h3>
   </div>
+    </div>
 
           
 <h4 id="sonetto-5-and-the-sistine-chapel"><em>Sonetto 5</em> and the Sistine Chapel</h4>
