--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <div class="topnav">
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-         <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/insidethe%20master'smind.png">
+         <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/insidethe%20master'smind.png"width="50" height="50">
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
