--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -70,6 +70,136 @@
 
           
 <h4 id="sonetto-5-and-the-sistine-chapel"><em>Sonetto 5</em> and the Sistine Chapel</h4>
+    
+    <table class="table table-hover">
+  <thead>
+    <tr>
+<th scope="col”>-</th>
+      <th scope="col">Italian original</th>
+      <th scope="col">English translation</th>
+    </tr>
+
+<tr>
+      <th scope="row">1</th>
+      <td>I’ ho già fatto un gozzo in questo stento</td>
+      <td>I’ve already grown a goiter at this drudgery—</td>
+    </tr>
+
+<tr>
+      <th scope="row">2</th>
+      <td>come fa l’acqua a’ gatti in Lombardia</td>
+      <td>as the water gives the cats in Lombardy</td>
+    </tr>
+
+<tr>
+      <th scope="row">3</th>
+      <td>o ver d’altro paese che si sia,</td>
+      <td>or else it may be in some other country—</td>
+    </tr>
+
+<tr>
+      <th scope="row">4</th>
+      <td>c’a forza ‘l ventre appicca sotto ‘l mento.</td>
+      <td>which sticks my stomach by force beneath my chin.</td>
+    </tr>
+
+<tr>
+      <th scope="row">5</th>
+      <td>La barba al cielo, e la memoria sento</td>
+      <td>With my beard toward heaven, I feel my memory-box</td>
+    </tr>
+
+<tr>
+      <th scope="row">6</th>
+      <td>in sullo scrigno, e ‘l petto fo d’arpia,</td>
+      <td>atop my hump; I’m getting a harpy’s breast;</td>
+    </tr>
+
+<tr>
+      <th scope="row">7</th>
+      <td>e ‘l pennel sopra, ‘l viso tuttavia</td>
+      <td>and the brush that is always above my face,</td>
+    </tr>
+
+<tr>
+      <th scope="row">8</th>
+      <td>nel fa, gocciando, un ricco pavimento.</td>
+      <td>by dribbling down makes it an ornate pavement.</td>
+    </tr>
+
+<tr>
+      <th scope="row">9</th>
+      <td>E’ lombi entrati mi son nella peccia,</td>
+      <td>My loins have entered my belly, and I make</td>
+    </tr>
+
+<tr>
+      <th scope="row">10/th>
+      <td>e fo del cul per contrapeso groppa,</td>
+      <td>my ass into a crupper as counterweight;</td>
+    </tr>
+
+<tr>
+      <th scope="row">11</th>
+      <td>e’ passi senza gli occhi muovo invano.</td>
+      <td>without my eyes, my feet move aimlessly.</td>
+    </tr>
+
+<tr>
+      <th scope="row">12</th>
+      <td>Dinanzi mi s’allunga la corteccia,</td>
+      <td>In front of me my hide is stretching out</td>
+    </tr>
+
+<tr>
+      <th scope="row">13</th>
+      <td>e per piegarsi adietro si ragroppa,</td>
+      <td>and, to wrinkle up behind, it forms a knot,</td>
+    </tr>
+
+<tr>
+      <th scope="row">14</th>
+      <td>e tendons com’arco sorïano.</td>
+      <td>and I am bent like a Syrian bow.</td>
+    </tr>
+
+<tr>
+      <th scope="row">15</th>
+      <td>Però fallace e strano</td>
+      <td>How fallacious and arch</td>
+    </tr>
+
+<tr>
+      <th scope="row">16</th>
+      <td>surge il iudizio che la mente porta,</td>
+      <td>the judgement grows, for which my mind is porter:</td>
+    </tr>
+
+<tr>
+      <th scope="row">17</th>
+      <td>ché mal si tra’ per cerbottana torta.</td>
+      <td>a crooked blow-pipe serves but as distorter.</td>
+    </tr>
+
+<tr>
+      <th scope="row">18</th>
+      <td>La mia pittura morta</td>
+      <td>My lifeless picture</td>
+    </tr>
+
+<tr>
+      <th scope="row">19</th>
+      <td>difendi orma’, Giovanni, e ‘l mio onore,</td>
+      <td>now defend, Giovanni, and my honor,</td>
+    </tr>
+
+<tr>
+      <th scope="row">20</th>
+      <td>non sendo in loco bon, né io pittore.</td>
+      <td>I’ll land in no good place, and I’m no painter.</td>
+    </tr>
+</tbody>
+</table>
 
 <table>
   <thead>
