--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -74,7 +74,7 @@
     <table class="table table-hover">
   <thead>
     <tr>
-<th scope="col”>-</th>
+<th scope="col”>Verse</th>
       <th scope="col">Italian original</th>
       <th scope="col">English translation</th>
     </tr>
@@ -134,7 +134,7 @@
     </tr>
 
 <tr>
-      <th scope="row">10/th>
+      <th scope="row">10</th>
       <td>e fo del cul per contrapeso groppa,</td>
       <td>my ass into a crupper as counterweight;</td>
     </tr>
