--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -71,10 +71,10 @@
           
 <h4 id="sonetto-5-and-the-sistine-chapel"><em>Sonetto 5</em> and the Sistine Chapel</h4>
     
-    <table class="table table-hover">
+<table class="table table-hover">
   <thead>
     <tr>
-<th scope="col”>Verse</th>
+      <th scope="col">Verse</th>
       <th scope="col">Italian original</th>
       <th scope="col">English translation</th>
     </tr>
