--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/annehaak/allereerste-website/master/insidethe%20master'smind.png">
   <link rel="shortcut icon" sizes="192x192" href="https://raw.githubusercontent.com/annehaak/allereerste-website/master/insidethe%20master'smind.png">
     
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron-narrow.css" rel="stylesheet">
     
      <div class="topnav">
