--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/clear-sans" type="text/css"/>
-  <link href="jumbotron-narrow.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+    <link href="jumbotron-narrow.css" rel="stylesheet">
     
     <title>The Mind of Michelangelo</title>
     <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/annehaak/allereerste-website/master/insidethe%20master'smind.png">
