--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -70,6 +70,7 @@
     </div>
 
            <div class="jumbotron-narrow">
+             <div class="centered">
 <table class="table table-hover">
   <thead>
     <tr>
