--- a/more.html
+++ b/more.html
@@ -74,7 +74,8 @@
 <p></p>
 </div>
 	     
-  <p class="lead">If you can't get enough of Michelangelo, make sure to check out his other poems! The first English translation by John Addington Symonds appeared in 1904 and is digitally available.</p>
+  <p class="lead">If you can't get enough of Michelangelo, make sure to check out his other poems!</p> 
+	<p class="lead">The first English translation by John Addington Symonds appeared in 1904 and is digitally available.</p>
     <p class="lead">A bibliography will be added to this website soon. The selection ranges from easy to use websites to more specialist literature.</p> 
   <p class="lead">Missing something? <a href="anne.haak@hotmail.com">Let me know!</a></p>
 
