--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
 
 </div>
   
-<div class="hero-image">
+<div class="hero-image" href="https://uploads2.wikiart.org/images/michelangelo/sketch-of-fortifications-of-porta-del-prato-in-florence-ground-floor-plan.jpg">
   <div class="hero-text">
     <h1 style="font-size:50px">Suggestions?</h1>
     <button>E-mail me!</button>
