--- a/index.html
+++ b/index.html
@@ -66,18 +66,11 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
 </div>
   
 <div class="hero-image"> 
+  <img src="https://uploads2.wikiart.org/images/michelangelo/sketch-of-fortifications-of-porta-del-prato-in-florence-ground-floor-plan.jpg">
   <div class="hero-text">
     <h1 style="font-size:50px">Suggestions?</h1>
     <button>E-mail me!</button>
   </div>
-</div>
-  
-<div class="jumbotron">
-  <h3 class="display-3">Suggestions or Contact</p>
-  <hr class="my-4">
-  <p class="lead">Further suggestions for this website? Or a Michelangelo addict who wants to share their passion?</p>
-
-<p class="lead"><a href="anne.haak@hotmail.com">E-mail me</a> and let’s get in touch!</p>
 </div>
 
 
