--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </li>
     </ul>
   </div>
+       </div>
 </nav>
       
 </head>
@@ -51,6 +52,7 @@
 <body>
 
   <div class="jumbotron">
+    <div class="container">
   <h1 class="display-3">Michelangelo: Inside the Master's Mind</h1>
   <hr class="my-4">
   <p class="lead">
@@ -64,6 +66,7 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
 <p class="lead">Have a look at the rest of this website to find out!</p>
 
 </div>
+  </div>
   
 <div class="hero-image"> 
   <img src="https://uploads2.wikiart.org/images/michelangelo/sketch-of-fortifications-of-porta-del-prato-in-florence-ground-floor-plan.jpg">
