--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
 <body>
 
-  <div class="jumbotron">
+  <div class="jumbotron jumbotron-fluid">
     <div class="container">
   <h1 class="display-3">Michelangelo: Inside the Master's Mind</h1>
   <hr class="my-4">
