--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 
   <div class="jumbotron jumbotron-fluid">
-    <div class="container">
+    <div class="container container-fluid">
   <h1 class="display-3">Michelangelo: Inside the Master's Mind</h1>
   <hr class="my-4">
   <p class="lead">
