--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 <body>
 
   <link href="jumbotron-narrow.css" rel="stylesheet">
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container container-fluid">
+  <div class="jumbotron">
   <h1 class="display-3">Michelangelo: Inside the Master's Mind</h1>
   <hr class="my-4">
   <p class="lead">
@@ -68,7 +67,6 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
 <p class="lead">Have a look at the rest of this website to find out!</p>
 
 </div>
-  </div>
   
 <div class="hero-image"> 
   <img src="https://uploads2.wikiart.org/images/michelangelo/sketch-of-fortifications-of-porta-del-prato-in-florence-ground-floor-plan.jpg">
