--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -57,7 +57,8 @@
        </div>
                        
              <div class="jumbotron">
-  <h1 class="display-3">Sonetto 5 and the Sistine Chapel: Michelangelo's letter to Giovanni da Pistoia</h1>
+               <h1 class="display-3">Sonetto 5 and the Sistine Chapel:</h1> 
+               <h1 class="Michelangelo's letter to Giovanni da Pistoia</h1>
   <hr class="my-4">
   <p class="lead">
          The sentence “I am no painter” is something one would never expect to hear from an artist like Michelangelo Buonarroti. His frescos in the Sistine Chapel, most famous for The Last Judgment and the Creation of Man have become an icon of western culture and are considered to be Michelangelo’s most famous painted works. However, contrary to popular belief, Michelangelo was not just a visual artist. Not only was he celebrated for his painted and sculpted works; he was an admired architect, and a pretty amazing poet as well.</p>
@@ -201,4 +202,7 @@
 </tbody>
 </table>
   </div>
+<div class="map-container">
+		<iframe style="border: 0;" src= http://www.vatican.va/various/cappelle/sistina_vr/index.html" width="600" height="450" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+          </div>
 
