--- a/prigioni.html
+++ b/prigioni.html
@@ -44,6 +44,11 @@
   </div>
        </div>
 </nav>
+	      <div class="jumbotron">
+               <h1 class="display-3">Release me:</h1> 
+               <h1 class="Michelangelo's marble Slaves</h1>
+  <hr class="my-4">
+  <p class="lead">
 	     
 <div class="col-span-4 sidebar">
 			<aside>
