--- a/prigioni.html
+++ b/prigioni.html
@@ -48,7 +48,7 @@
                <h1 class="display-3">Release me:</h1> 
                <h1 class="Michelangelo's marble Slaves</h1>
   <hr class="my-4">
-  <p class="lead">
+  <p class="lead">More content to be added soon
 	     
 <div class="col-span-4 sidebar">
 			<aside>
