--- a/prigioni.html
+++ b/prigioni.html
@@ -45,8 +45,8 @@
        </div>
 </nav>
 	      <div class="jumbotron">
-               <h1 class="display-3">Release me:</h1> 
-               <h1 class="Michelangelo's marble Slaves</h1>
+               <h1 class="display-3">Release me: Michelangelo's marble slaves</h1> 
+    
   <hr class="my-4">
   <p class="lead">More content to be added soon
 	     
