--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
   </div>
 </div>
 
+  <div class="col-span-4 sidebar">
+<aside>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
