--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <body>
 
   <div class="jumbotron">
+    <div class="centered">
   <h1 class="display-3">Michelangelo: Inside the Master's Mind</h1>
   <hr class="my-4">
   <p class="lead">
