--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   
 <body>
 
+  <link href="jumbotron-narrow.css" rel="stylesheet">
   <div class="jumbotron">
-    <div class="centered">
   <h1 class="display-3">Michelangelo: Inside the Master's Mind</h1>
   <hr class="my-4">
   <p class="lead">
