--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -57,8 +57,7 @@
        </div>
                        
              <div class="jumbotron">
-               <h1 class="display-3">"I am not in a good place, and I am no painter":</h1> 
-               <h1 class="Michelangelo's desperate letter to Giovanni da Pistoia</h1>
+               <h1 class="display-3">"I am not in a good place, and I am no painter": Michelangelo's desperate letter to Giovanni da Pistoia</h1>
   <hr class="my-4">
   <p class="lead">
          “I am no painter” is something you would never expect to hear from an artist like Michelangelo Buonarroti. His frescos in the Sistine Chapel, most famous for The Last Judgment and the Creation of Man have become an icon of western culture and are considered to be Michelangelo’s most famous painted works. However, contrary to popular belief, Michelangelo was not just a visual artist. Not only was he celebrated for his painted and sculpted works; he was an admired architect, and a pretty amazing poet as well.</p>
@@ -207,7 +206,7 @@
 		     <div class="jumbotron">
 					   <p class="lead">If we want a trustworthy impression of the artist's "true" thinking, a sonnet like this is all we could ask for: on this piece of paper, Michelangelo does not only give a written account of his experiece, he also draws it for us as you can see on the bottom-right of the paper. It only takes a little imagination to see his stained face and feel his sore limbs in this autobiographical sketch. In the final verse, Michelangelo tells Giovanni (and us) that he does not like being here, but most importantly: that he does not like to paint.</p>
 					   
-														     <p class="lead">Have a look at the ceiling yourself: what do you think?</p>
+														     <p class="lead">Have a look at the ceiling and judge it yourself: what do you think?</p>
 							  <iframe src="https://www.google.com/maps/embed?pb=!4v1538430417551!6m8!1m7!1sCAoSLEFGMVFpcE9xNkh3amRHX05aQmNrRWNVYUp6cWotLXRRZU9oQlRERDZ4NVlH!2m2!1d41.90299080324293!2d12.45448166087399!3f335.4189430114611!4f84.54835782911698!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 							  </div>
 							  <div class=footer>
