--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -57,7 +57,7 @@
        </div>
                        
              <div class="jumbotron">
-               <h1 class="display-3">"I am not in a good place, and I am no painter": Michelangelo's desperate letter to Giovanni da Pistoia</h1>
+               <h1 class="display-3">"I am not in a good place, and I am no painter": Michelangelo's desperate letter to a friend</h1>
   <hr class="my-4">
   <p class="lead">
          “I am no painter” is something you would never expect to hear from an artist like Michelangelo Buonarroti. His frescos in the Sistine Chapel, most famous for The Last Judgment and the Creation of Man have become an icon of western culture and are considered to be Michelangelo’s most famous painted works. However, contrary to popular belief, Michelangelo was not just a visual artist. Not only was he celebrated for his painted and sculpted works; he was an admired architect, and a pretty amazing poet as well.</p>
