--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ And did the <em>‘divine’</em> Michelangelo back then like his own art as muc
   </div>
 </div>
 
+  <div class="footer">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
