--- a/more.html
+++ b/more.html
@@ -76,7 +76,7 @@
 	     
   <p class="lead">If you can't get enough of Michelangelo, make sure to check out his other poems!</p> 
 	<p class="lead">The first English translation by John Addington Symonds appeared in 1904 and is digitally available.</p>
-    <p class="lead">A bibliography will be added to this website soon. The selection ranges from easy to use websites to more specialist literature.</p> 
+    <p class="lead">A bibliography will be added to this website soon. The selection ranges from easy to use websites to interesting articles and more specialist literature.</p> 
   <p class="lead">Missing something? <a href="anne.haak@hotmail.com">Let me know!</a></p>
 
 <body>
